chore: finish Mastodon part

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -236,6 +236,16 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+# Well-known Endpoints
+ @misc{nottingham_2019,
+  title     = {RFC 8615 - well-known Uniform Resource Identifiers (uris)},
+  url       = {https://datatracker.ietf.org/doc/html/rfc8615},
+  journal   = {Internet Engineering Task Force (IETF)},
+  publisher = {IETF},
+  author    = {Nottingham, M.},
+  year      = {2019},
+  month     = {May}
+} 
 
 #Webhost Metadata
  @misc{cook_2011,
@@ -248,15 +258,15 @@
   month   = {Oct}
 } 
 
-# Well-known Endpoints
- @misc{nottingham_2019,
-  title     = {RFC 8615 - well-known Uniform Resource Identifiers (uris)},
-  url       = {https://datatracker.ietf.org/doc/html/rfc8615},
-  journal   = {Internet Engineering Task Force (IETF)},
-  publisher = {IETF},
-  author    = {Nottingham, M.},
-  year      = {2019},
-  month     = {May}
+# Change Password
+ @misc{mondello_o'connor_2021,
+  title     = {A Well-Known URL for Changing Passwords},
+  url       = {https://w3c.github.io/webappsec-change-password-url/},
+  journal   = {A well-known URL for changing passwords},
+  publisher = {W3C},
+  author    = {Mondello, Ricky and O'Connor, Theresa},
+  year      = {2021},
+  month     = {Jan}
 } 
 
 # Ostatus
