--- a/Thesis/content/02_related_work.tex
+++ b/Thesis/content/02_related_work.tex
@@ -71,15 +71,13 @@ ActivityPub is another W3C Recommendation that originated from the SocialWG. It 
   }
 \end{lstlisting}
 
-There are two workflows of communication for a user in ActivityPub: 
+There are two workflows of communication for a user in ActivityPub: \label{subsec:ap_workflows}
 
 \begin{itemize}
   \item \textbf{Client-to-server communication:} A user wants to share a post so it makes an HTTP POST request to its outbox with the respective activity object. After this, other users interested in seeing this user's posts can make an HTTP GET request to the user's outbox and retrieve all his public posts.
-  \item \textbf{Server-to-server communication (Federation)}: User \emph{A} wants to send a post to user \emph{B}, whose account is on a different server. First, user \emph{A} posts his message to his outbox. Consequently, his server looks for \emph{B}'s inbox and performs an HTTP POST request. Finally, \emph{B} makes an HTTP GET request to his inbox to retrieve all the posts addressed to him. A key thing to remember is that for this type of communication, \emph{A}'s server has to retrieve somehow the \emph{inbox} of user \emph{B}. This resolving process is not part of the ActivityPub specification, and implementers of this standard have the freedom to choose how to do it. 
+  \item \textbf{Server-to-server communication (Federation)}: User \emph{A} wants to send a post to user \emph{B}, whose account is on a different server. First, user \emph{A} posts his message to his outbox. Consequently, his server looks for \emph{B}'s inbox and performs an HTTP POST request. Finally, \emph{B} makes an HTTP GET request to his inbox to retrieve all the posts addressed to him. A key thing to remember is that for this type of communication, \emph{A}'s server has to retrieve somehow the \emph{inbox} of user \emph{B} based only on his username. This resolving process is not part of the ActivityPub specification, therefore,  implementers of this standard have to figure out how to do it independently. 
 \end{itemize}
  
-
-
 
 \begin{figure}[H]
   \centering
@@ -89,27 +87,22 @@ There are two workflows of communication for a user in ActivityPub:
 \end{figure}
 \pagebreak
 
-Regarding security, ActivityPub's specification does not define any official security mechanisms to ensure confidentiality, non-repudiation, message integrity, authentication, or authorization \cite{lemmer-webber_tallon_guy_prodromou_2018}. It recommends using HTTPS for its HTTP-based communication, relying on third-party certificate authorities to provide transport-layer security. Nonetheless, other security aspects remain unaddressed. 
-
-
-Although not included in ActivityPub, the SocialWG published a list of best security practices\footnote{https://www.w3.org/wiki/SocialCG/ActivityPub/Authentication\_Authorization} which suggests using standards like OAuth 2.0\footnote{https://oauth.net/2/} for client-to-server authentication, as well as HTTP Signatures\footnote{https://tools.ietf.org/html/draft-cavage-http-signatures-08} and Linked Data Signatures\footnote{https://w3c-dvcg.github.io/ld-signatures/} for server-to-server authentication.
-
-HTTP signatures extend the HTTP protocol by adding the possibility to cryptographically sign the HTTP requests. This signature gets added to the request within the \emph{Signature} header, and it provides not only end-to-end message integrity but also proof of the authenticity of the sender without the need for multiple round-trips \cite{cavage_sporny_2019}. Following the same idea, Linked Data Signatures offer a way to create and attach signatures to JSON-LD documents, thus providing non-repudiation to e.g. an ActivityStreams Activity object even if the object has been shared, forwarded, or referenced at a future time \cite{celik_prodromou_le_hors_2014}.
-
-The reason why these security specifications were not included in ActivityPub is unclear. Nonetheless, some ActivityPub-based social networks have added HTTP and JSON-LD signatures to their implementation. Providing a new layer of security for its userbase. One of these social networks is Mastodon, which will be explained in the next section.
+Regarding security, ActivityPub's specification does not define any official security mechanisms to ensure confidentiality, non-repudiation, message integrity, authentication, or authorization \cite{lemmer-webber_tallon_guy_prodromou_2018}. However, it mentions a list published by the SocialWG of best security practices\footnote{https://www.w3.org/wiki/SocialCG/ActivityPub/Authentication\_Authorization} that may be used in ActivityPub. This list suggests using standards such as OAuth 2.0\footnote{https://oauth.net/2/} for client-to-server authentication, as well as HTTP Signatures\footnote{https://tools.ietf.org/html/draft-cavage-http-signatures-08} and Linked Data Signatures\footnote{https://w3c-dvcg.github.io/ld-signatures/} for server-to-server authentication. Furthermore, it recommends using HTTPS for its HTTP-based communication to provide at least transport-layer encryption.
 
 
 % ------------ActivityPub-Based social networks------------------------------------
 \section{ActivityPub-based Social Networks}
 
+\subsection{The Fediverse}
+
 It is impossible not to refer to the \emph{Fediverse} when we talk about ActivityPub. The \emph{Fediverse} is an interoperable collection of different federated social networks running on free open software on thousands of servers across the world that implement the same open-standard protocols to be able to interact with each other. In today's most popular social networks like Facebook, Twitter, or Youtube, a centralized architecture keeps millions of users on one platform. Control, decision-making, user data, and censorship depend on a single profit-driven organization. On the contrary, the \emph{Fediverse} is developed by a not-profit-driven community of people around the globe independent of any corporation or official institution \cite{holloway_2018} \cite{https://doi.org/10.48550/arxiv.1909.05801}. The simplest way to explain how the federation works is the following example: Bob has a Twitter account, which he uses to follow all his friends that also have a Twitter account. Alice is a friend of Bob, but she only has an account on Youtube. In the real world, these two services are completely isolated and cannot communicate with each other. However, if both had implemented the same social network protocol, such as ActivityPub, Bob would be able to find Alice by a normal search on Twitter and follow her. Allowing any new post of Alice on Youtube, to appear in Bob's Twitter timeline.
 
-Before ActivityPub, the \emph{Fediverse} implemented other protocols like \emph{Ostatus}\footnote{https://www.w3.org/community/ostatus/wiki/images/9/93/OStatus\_1.0\_Draft\_2.pdf}, \emph{Matrix}\footnote{https://matrix.org/}, and \emph{Diaspora}\footnote{https://diaspora.github.io/diaspora\_federation/}. However, after ActivityPub was published as a Recommendation by the SocialWG in January 2018, a big number of these federated social networks upgraded to ActivityPub. Becoming rapidly the predominant protocol. Furthermore, the range of services that can be found inside the \emph{Fediverse} includes blogging, microblogging, video streaming, photo, music sharing as well as file hosting. For example: 
+Before ActivityPub, the \emph{Fediverse} implemented other protocols like \emph{Ostatus}\footnote{https://www.w3.org/community/ostatus/wiki/images/9/93/OStatus\_1.0\_Draft\_2.pdf}, \emph{Matrix}\footnote{https://matrix.org}, and \emph{Diaspora}\footnote{https://diaspora.github.io/diaspora\_federation}. However, after ActivityPub was published as a Recommendation by the SocialWG in January 2018, a big number of these federated social networks upgraded to ActivityPub. Becoming rapidly the predominant protocol. Furthermore, the range of services that can be found inside the \emph{Fediverse} includes blogging, microblogging, video streaming, photo, music sharing as well as file hosting. For example: 
 
 \begin{itemize}
-  \item \textbf{PeerTube\footnote{https://joinpeertube.org/}:} A decentralized alternative to video platforms, similar to Youtube.
-  \item \textbf{Mastodon\footnote{https://joinmastodon.org/}:} A microblogging social network, similar to Twitter. 
-  \item \textbf{Pixelfed\footnote{https://pixelfed.org//}:} An image-sharing platform, similar to Instagram. 
+  \item \textbf{PeerTube\footnote{https://joinpeertube.org}:} A decentralized alternative to video platforms, similar to Youtube.
+  \item \textbf{Mastodon\footnote{https://joinmastodon.org}:} A microblogging social network, similar to Twitter. 
+  \item \textbf{Pixelfed\footnote{https://pixelfed.org}:} An image-sharing platform, similar to Instagram. 
 \end{itemize} 
 
 Although it was not the first social network to implement ActivityPub, Mastodon is the one that pioneered its use on a large scale \cite{lemmer-webber_2017}. Moreover, it is still the social network in the \emph{Fediverse} with the biggest user base and popularity. For this reason, Mastodon will be used in this thesis as the representative of the ActivityPub-based social networks and will be explained further in the next section. 
@@ -117,77 +110,84 @@ Although it was not the first social network to implement ActivityPub, Mastodon 
 % ------------Mastodon------------------------------------
 \subsection{Mastodon}\label{subsec:mastodon}
 
- Mastodon is a decentralized microblogging social network created with the idea to bring social networking back into the hands of its users. The german creator of Mastodon, Eugen Rochko, shared the same opinion as what Fitzpatrick and Recordon said in 2007 \cite{fitzpatrick_recordon_2007}: \emph{People are getting sick of registering and re-declaring their friends on every site}. For this reason, Eugen envisioned a social network that could end this, and \emph{last forever} \cite{tilley_2018}. Similar to the \emph{Fediverse}, Mastodon differs from other commercial social networks in two aspects. First, it is oriented towards small communities and community-based services. Each \emph{instance}\footnote{A server running Mastodon} is free to choose its topics, this way users are encouraged to choose the instance better suited to their taste. Second, the Mastodon platform eliminates the presence of sponsored users or posts in feeds. This implies that the only way to connect or consume content is through a self-search to find an already known account or to explore the feeds of the users in other instances with similar interests \cite{8845221}. From a user experience perspective, Mastodon includes all the essential features of a microblogging platform, such as Twitter. This includes: 
+ Mastodon is a decentralized Twitter-like microblogging social network created with the idea to bring social networking back into the hands of its users. The german creator of Mastodon, Eugen Rochko, shared the same opinion as what Fitzpatrick and Recordon said in 2007 \cite{fitzpatrick_recordon_2007}: \emph{People are getting sick of registering and re-declaring their friends on every site}. For this reason, Eugen envisioned a social network that could end this, and \emph{last forever} \cite{tilley_2018}. Similar to the \emph{Fediverse}, Mastodon differs from other commercial social networks in two aspects. First, it is oriented towards small communities and community-based services. Each \emph{instance}\footnote{A server running Mastodon} is free to choose its topics, this way users are encouraged to choose the instance better suited to their taste. Second, the Mastodon platform eliminates the presence of sponsored users or posts in feeds. This implies that the only way to connect or consume content is through a self-search to find an already known account or to explore the feeds of the users in other instances with similar interests \cite{8845221}. From a user experience perspective, Mastodon includes all the essential features of a microblogging platform, such as:
 
 \begin{itemize}
   \item Follow other users, even if they are not in the same instance. 
   \item Post small status updates, or \emph{toots}, up to 500 characters long. 
-  \item Timeline of the local-instance and federated statuses. 
+  \item Access to a timeline of the local instance and federated statuses. 
   \item Control over the visibility of their posts, with the option to set them as private, instance-level only, or federated. 
 \end{itemize}
 
+Mastodon's implementation of ActivityPub follows the guidelines defined by the spec. However, the protocol does not specify how to implement some key processes required for a fully-working social network. Therefore, Mastodon extended and complemented the protocol with the following processes and features.
 
-\cite{nottingham_2019}
-As per documentation, Mastodon implements the following 4 different well-known endpoints: 
 
-% \subsubsection{Change password}
-% This endpoint origins form the proposal of the Web Application Security Working Group (WebAppSec) from the W3C, whose main mission is to provide security and policy frameworks to increase web application security and enable safe cross-site communication (https://www.w3.org/groups/wg/). It defines a well-known URL that sites can use to make their change password forms discoverable by tools. This URL would enable software, specially password managers, to easily redirect users to the right link for them to change their password.
-
-% \subsubsection{NodeInfo}
-% NodeInfo is an initiative to standardize the presentation of metadata about a server operating one of the distributed social networks. The two main aims are to get greater insights into the distributed social networking user base and to provide tools that allow users to select the most suited software and server for their requirements. Mastodon is one of the implementers of this protocol, along with other federated social networks such as Diaspora, Peertube and WordPress [http://nodeinfo.diaspora.software/ ]. NodeInfo specifies that servers must provide the well-known path /.well-known/nodeinfo and provide a JRD document referencing the supported documents via Link elements, as shown in \label{NodeInfo response example}. [http://nodeinfo.diaspora.software/protocol.html ] Accessing the hypertext reference from the JRD response will give a schematized series of metadata of the instance running the endpoint, such as NodeInfo schema version, software, protocols supported by the server, statistics and even a list of third-party services that can interact with the server via an API. Figure \label{fig:nodeinfo_response} shows the NodeInfo 2.0 schema of the Mastodon instance mastodon.social. 
+\subsubsection{Security}
+Mastodon has implemented the authentication and authorization mechanisms from the best practices list of the SocialWG, to address the security concerns in ActiviyPub. However,  relevant for this thesis are the ones used in federated communication, namely HTTP and JSON-LD Signatures. HTTP signatures extend the HTTP protocol by adding the possibility to cryptographically sign the HTTP requests. This signature gets added to the request within the \emph{Signature} header, and it provides not only end-to-end message integrity but also proof of the authenticity of the sender without the need for multiple round-trips \cite{cavage_sporny_2019}. Creating an HTTP signature means signing the parameters of the request itself, i.e the \emph{request-target}, the \emph{host}, and the \emph{date}. These parameters and their values are concatenated in a single string, hashed, and signed with the sender's public key. Finally, the \emph{Signature} header indicates the key that was used to sign the document, the parameters that are inside the signature, and the algorithm used to hash it. An example in Mastodon is shown by figure \ref{fig:http_signature}. 
+Following the same idea, Linked Data Signatures offer a way to create and attach signatures to JSON-LD documents, thus providing non-repudiation to e.g. an ActivityStreams Activity object even if the object has been shared, forwarded, or referenced at a future time \cite{celik_prodromou_le_hors_2014}. However, this feature, although implemented, is not actively used in Mastodon.
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[caption=NodeInfo response example, label=NodeInfo response example, float=h]
-  {
-      "links": [
-          {
-            "rel": "http://nodeinfo.diaspora.software/ns/schema/2.1",
-              "href": "https://example.org/nodeinfo/2.1"
-          }
-      ]
-  }
+\begin{lstlisting}[language=PHP, caption=Signed HTTP Request, label=fig:http_signature, float=h]
+
+GET /users/username/inbox HTTP/1.1
+Host: mastodon.example
+Date: 18 Dec 2019 10:08:46 GMT
+Accept: application/activity+json
+Signature: keyId="https://my-example.com/actor#main-key",headers="(request-target) host date",signature="Y2FiYW...IxNGRiZDk4ZA=="
+
 \end{lstlisting}
 
-\lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=NodeInfo request]
-    GET /wel-known/nodeinfo/2.0 HTTP/1.1
-    Host: mastodon.social
-\end{lstlisting}
+For Mastodon to be able to implement these signatures, it was necessary to generate keypairs for the users. For this, Mastodon added a new property \emph{publicKey} to the actor object, which includes the pem-formatted public key of an RSA-2018 keypair, as shown in figure\ref{fig:mastodon_actor_object}.
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=NodeInfo response for mastodon.social, label=fig:nodeinfo_response, float=h]
+\begin{lstlisting}[language=PHP, caption=Mastodon extended version of ActivityPub's actor object, label=fig:mastodon_actor_object, float=ht]
 {
-   "version": "2.0",
-   "software": {
-       "name": "mastodon",
-       "version": "3.5.3"
-   },
-   "protocols": [
-       "activitypub"
-   ],
-   "services": {
-       "outbound": [],
-       "inbound": []
-   },
-   "usage": {
-       "users": {
-           "total": 718555,
-           "activeMonth": 61717,
-           "activeHalfyear": 178356
-       },
-       "localPosts": 36484017
-   },
-   "openRegistrations": true,
-   "metadata": []
+    "@context": [
+        "https://www.w3.org/ns/activitystreams",
+    ],
+    "id": "https://mastodon.social/users/bob",
+    "type": "Person",
+    "following": "https://mastodon.social/users/bob/following",
+    "followers": "https://mastodon.social/users/bob/followers",
+    "inbox": "https://mastodon.social/users/bob/inbox",
+    "outbox": "https://mastodon.social/users/bob/outbox",
+    "featured": "https://mastodon.social/users/bob/collections/featured",
+    "featuredTags": "https://mastodon.social/users/bob/collections/tags",
+    "preferredUsername": "bob",
+    "name": "Bob",
+    "summary": "",
+    "url": "https://mastodon.social/@bob",
+    "manuallyApprovesFollowers": false,
+    "discoverable": false,
+    "published": "2022-01-18T00:00:00Z",
+    "devices": "https://mastodon.social/users/bob/collections/devices",
+    "publicKey": {
+        "id": "https://mastodon.social/users/bob#main-key",
+        "owner": "https://mastodon.social/users/bob",
+        "publicKeyPem": "-----BEGIN PUBLIC KEY-----\nMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuWWHabkb/1v/OtK3x3EJ\nvxVaHwwN0PxTbOT/UsDNhu8GynBA2A371rg+BEUFGE/yQ6ljaDcqiQtaAMnuvOpT\nLRUOXu5O5Ct+qBWoLb+Box2NkSWJWc4rP+FXEHM+PTPqJJEplZSKIboCjLijw90V\nCD0hL6nBdXSnNp3CeaiDJfjXx+8MoR7xm4AB4Av0nrrM/eGBd60UM3EqMUVAWYtN\n813hrCmbapi++KY9DE7QpMPUoyOiarvFtl8JpV9HWJ1FrwloT17jJ02smPoCy6iv\nQgDXcAWnMm2PZWuSh/uQ7Y6Iq1ZSCkdQJQwaNsyB6O4BlyPujU2f2wg4nzf5QaBn\nwQIDAQAB\n-----END PUBLIC KEY-----\n"
+    },
+    "tag": [],
+    "attachment": [],
+    "endpoints": {
+        "sharedInbox": "https://mastodon.social/inbox"
+    },
+    "icon": {
+        "type": "Image",
+        "mediaType": "image/jpeg",
+        "url": "https://files.mastodon.social/accounts/avatars/107/643/267/140/999/130/original/557f01fa567f8220.jpg"
+    }
 }
 \end{lstlisting}
 
+\subsubsection{Resolving accounts}
+As explained in \ref{subsec:ap_workflows}, ActivityPub requires a resolving process when wanting to send a message to a user whose account resides on a different server. For this, Mastodon implemented \emph{Well-Known URIs}\footnote{https://www.rfc-editor.org/rfc/rfc8615.html}, which enable the discovery of information about an origin in well-known endpoints\cite{nottingham_2019}. The two most relevant endpoints are the following: 
 
-\subsubsection{Web Host Metadata}
-    Web host metadata is a lightweight metadata document format that allows for the identification of host policy or information, where \emph{host} refers to the entity in charge of a collection of resources defined by URIs with a common URI host. It employs the XRD 1.0\footnote{https://docs.oasis-open.org/xri/xrd/v1.0/os/xrd-1.0-os.html} document format, which offers a basic and flexible XML-based schema for resource description. Moreover, it provides two mechanisms for providing resource-specific information, specifically,  \emph{link templates} and \emph{Link-based Resource Descriptor Documents} (LRDD). On the one hand, link templates require a URI to work, thus avoiding the use of fixed URIs. On the other hand, the LRDD relation type is used to relate LRDD documents to resources or host-meta documents \cite{cook_2011}. In the specific case of the Mastodon implementation, requesting the host-meta endpoint will give us back the \emph{lrdd} link to the Webfinger endpoint, where specific resource information can be found. This is illustrated by figures \ref{fig:host_metadata_response} and \ref{fig:host_metadata_request}.
+\begin{itemize}
+  \item \textbf{Web Host Metadata: }
+    This endpoint allows the discovery of host information, using a lightweight metadata document format. In this context, \emph{host} refers to the entity in charge of a collection of resources defined by URIs with a common URI host \cite{cook_2011}. It employs the XRD 1.0\footnote{https://docs.oasis-open.org/xri/xrd/v1.0/os/xrd-1.0-os.html} document format, which offers a basic and flexible XML-based schema for resource description. Moreover, it provides two mechanisms for providing resource-specific information, \emph{link templates} and \emph{Link-based Resource Descriptor Documents} (LRDD). On the one hand, link templates require a URI to work, thus avoiding the use of fixed URIs. On the other hand, the LRDD relation type is used to relate LRDD documents to resources or host-meta documents \cite{cook_2011}. In the specific case of the Mastodon implementation, requesting the host-meta endpoint will give us back the \emph{lrdd} link to the Webfinger endpoint, where specific resource information can be found. This is illustrated by figures \ref{fig:host_metadata_response} and \ref{fig:host_metadata_request}.
 
 \lstset{style=JSONStyle}
-\begin{lstlisting}[language=PHP, caption=Example Host Metadata request to mastodon.social, label=fig:host_metadata_request, float=h]
+\begin{lstlisting}[language=PHP, caption=Example Host Metadata request to mastodon.social, label=fig:host_metadata_request, float=ht]
     GET /.well-known/host-meta HTTP/1.1
     Host: mastodon.social
     Accept: application/xrd+xml
@@ -201,8 +201,8 @@ As per documentation, Mastodon implements the following 4 different well-known e
     </XRD>
 \end{lstlisting}
 
-\subsubsection{Webfinger}
-Finally, Webfinger is the protocol on which Mastodon heavily relies for the resolving process and its federated functioning \cite{rochko_2020}. Webfinger allows for discovering information about persons or other entities on the Internet using HTTP such as a personal profile address, identity service, telephone number or email. Performing a query to a WebFinger endpoint requires a query component with a resource parameter, which is the URI that identifies the identity that is being looked up. Mastodon employs the \emph{acct}\footnote{https://datatracker.ietf.org/doc/html/rfc7565} URI format, which aims to offer a scheme that generically identifies a user's account with a service provider without requiring a specific protocol. In the same way NodeInfo works, it returns a JRD Document describing the entity \cite{jones_salgueiro_jones_smarr_2013}.  Fig. \label{Webfinger response from mastodon.social} shows an example of the returned JRD that is being provided by the WebFinger endpoint in the mastodon social instance when querying the account "acct:bob@mastodon.social".
+\item \textbf{Webfinger:}
+Mastodon relies on the Webfinger protocol for the resolving process and its federated functioning \cite{rochko_2020}. Webfinger allows for discovering information about persons or other entities on the Internet using HTTP such as a personal profile address, identity service, telephone number or email. Performing a query to a WebFinger endpoint requires a query component with a resource parameter, which is the URI that identifies the identity that is being looked up. Mastodon employs the \emph{acct}\footnote{https://datatracker.ietf.org/doc/html/rfc7565} URI format, which aims to offer a scheme that generically identifies a user's account with a service provider without requiring a specific protocol. Webfinger's response consists of a \emph{JSON Resource Descriptor} (JRD) Document describing the entity \cite{jones_salgueiro_jones_smarr_2013}. Fig. \label{Webfinger response from mastodon.social} shows an example of the returned JRD document provided by the WebFinger endpoint of the \emph{mastodon.social}\footnote{https://mastodon.social} instance when querying the account \emph{acct:bob@mastodon.social}.
 
 \lstset{style=JSONStyle}
 \begin{lstlisting}[language=PHP, caption=HTTP request to Webfinger endpoint, label=Webfinger request, float=h]
@@ -237,7 +237,7 @@ Finally, Webfinger is the protocol on which Mastodon heavily relies for the reso
    ]
 }
 \end{lstlisting}
-
+\end{itemize}
 
 \section{Decentralized Identifiers} \label{section:dids}
 
@@ -448,3 +448,60 @@ In both alternatives, the identity of the sender can be confirmed and the plain 
 
 Compare with other encryption methods. (TLS, Whatsapp end-to-end, Signal) (Use image below)
  
+
+% ---Left out well-known URIs. ----------
+% 
+% 
+% \item \textbf{Change password:}
+%   This endpoint origin from the proposal of the Web Application Security Working Group (WebAppSec) of the W3C. It defines a well-known URL that sites can use to make their change password forms discoverable by tools. This URL would enable software, especially password managers, to easily redirect users to the right link for them to change their password \cite{mondello_o'connor_2021}.
+% 
+%   \item \textbf{NodeInfo: }
+%   NodeInfo is an initiative to standardize the presentation of metadata about a server operating one of the distributed social networks. The two main aims are to get greater insights into the distributed social networking user base and to provide tools that allow users to select the most suited software and server for their requirements. Mastodon is one of the implementers of this protocol, along with other federated social networks such as Diaspora, Peertube and WordPress [http://nodeinfo.diaspora.software/ ]. NodeInfo specifies that servers must provide the well-known path /.well-known/nodeinfo and provide a JRD document referencing the supporting documents via Link elements, as shown in \label{NodeInfo response example}. [http://nodeinfo.diaspora.software/protocol.html ] Accessing the hypertext reference from the JRD response will give a schematized series of metadata of the instance running the endpoint, such as NodeInfo schema version, software, protocols supported by the server, statistics and even a list of third-party services that can interact with the server via an API. Figure \label{fig:nodeinfo_response} shows the NodeInfo 2.0 schema of the Mastodon instance mastodon.social. 
+% \end{itemize}
+% 
+% 
+% \lstset{style=JSONStyle}
+% \begin{lstlisting}[caption=NodeInfo response example, label=NodeInfo response example, float=h]
+%   {
+%       "links": [
+%           {
+%             "rel": "http://nodeinfo.diaspora.software/ns/schema/2.1",
+%               "href": "https://example.org/nodeinfo/2.1"
+%           }
+%       ]
+%   }
+% \end{lstlisting}
+
+% \lstset{style=JSONStyle}
+% \begin{lstlisting}[language=PHP, caption=NodeInfo request]
+%     GET /wel-known/nodeinfo/2.0 HTTP/1.1
+%     Host: mastodon.social
+% \end{lstlisting}
+
+% \lstset{style=JSONStyle}
+% \begin{lstlisting}[language=PHP, caption=NodeInfo response for mastodon.social, label=fig:nodeinfo_response, float=h]
+% {
+%    "version": "2.0",
+%    "software": {
+%        "name": "mastodon",
+%        "version": "3.5.3"
+%    },
+%    "protocols": [
+%        "activitypub"
+%    ],
+%    "services": {
+%        "outbound": [],
+%        "inbound": []
+%    },
+%    "usage": {
+%        "users": {
+%            "total": 718555,
+%            "activeMonth": 61717,
+%            "activeHalfyear": 178356
+%        },
+%        "localPosts": 36484017
+%    },
+%    "openRegistrations": true,
+%    "metadata": []
+% }
+% \end{lstlisting}
