--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -40,6 +40,28 @@
 
 ## DIDS
 
+# W3C DID Press release
+ @article{w3c_2022,
+  title     = {Decentralized Identifiers (DIDs) v1.0 becomes a W3C Recommendation},
+  url       = {https://www.w3.org/2022/07/pressrelease-did-rec.html.en},
+  journal   = {W3C},
+  publisher = {W3C},
+  year      = {2022},
+  month     = {Jul}
+}
+
+@inproceedings{Naik_Jenkins_2021,
+  title        = {Sovrin Network for Decentralized Digital Identity: Analysing a Self-Sovereign Identity System Based on Distributed Ledger Technology},
+  issn         = {2687-8828},
+  doi          = {10.1109/ISSE51541.2021.9582551},
+  booktitle    = {2021 IEEE International Symposium on Systems Engineering (ISSE)},
+  author       = {Naik, Nitin and Jenkins, Paul},
+  year         = {2021},
+  month        = {Sep},
+  pages        = {1–7}
+}
+
+
 #did-core
  @misc{sporny_longley_sabadello_reed_steele_2021,
   title     = {Decentralized identifiers (dids) v1.0},
@@ -50,6 +72,26 @@
   year      = {2021},
   month     = {Aug}
 } 
+
+#Everything is a DID 
+ @article{Conway_Hughes_Ma_Poole_Riedel_2019,
+  title        = {A DID for Everything},
+  author       = {Conway, Shaun and Hughes, Andrew and Ma, Moses and Poole, Jack and Riedel, Martin},
+  pages        = {24},
+  language     = {en},
+  year         = {2019}
+}
+
+# Layer 2 Blockchain
+ @misc{weston_2022,
+  title   = {What is a layer 2 protocol in Blockchain?},
+  url     = {https://101blockchains.com/layer-2-protocols-blockchain/},
+  journal = {101 Blockchains},
+  author  = {Weston, Georgia},
+  year    = {2022},
+  month   = {Aug}
+} 
+
 
 # did:ethr spec
  @misc{nistor_grassberger_carlin_2022,
