--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -12,7 +12,8 @@ Web3 brings decentralization, and identities should stay behind. W3C provides us
  
 \section{Digital Identities}
 % The evolution of the digital identity 
- 
+% https://www.fit.fraunhofer.de/content/dam/fit/de/documents/Fraunhofer%20FIT_SSI_Whitepaper_EN.pdf 
+
 % Almost every person who uses computers or accesses the Internet today has some form of digital identity. 
 % % [https://www.cloudflare.com/learning/access-management/what-is-identity/ ]
  
@@ -33,7 +34,13 @@ Web3 brings decentralization, and identities should stay behind. W3C provides us
 % authorities serves as its own root of trust.
 % An entity trailing along a value chain is interacting with multiple systems. Consequently, a new actor in any given value chain has no method to independently verify credentials of a human or attributes of either a physical object or data item (provenance, audit trail). This results in the existence of complex validation, quality inspection, and paper trail processes, and enormous hidden trust overhead costs are added to all value chains and services (DID for everything).
  
-\section{Identity Management}
+\section{Identifiers}
+% ---- from DID section ---
+
+Globally unique identifiers are used by individuals, organizations, abstract entities, and even internet of things devices for all kinds of different contexts. Nonetheless, the large majority of these globally unique identifiers are not under the entity's control. We rely on external authorities to issue them, allowing them to decide who or what they refer to and when they can be revoked. Their existence, validity scope and even the security mechanisms that protect them are all dependent on these external authorities. Leaving their actual owners helpless against any kind of threat or misuse\cite{sporny_longley_sabadello_reed_steele_2021}. In order to address this lack of control, the W3C DID Working Group conceptualized the Decentralized Identifiers or \emph{DIDs}.
+% ----
+
+
 Identity management, sometimes called identity and access management, is composed of all the different ways to identify, authenticate and authorize someone to access systems or services within an organization or associated organizations. 
 
 There are several problems with our current identity management systems:
