chore: added dicomm to related work

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -410,6 +410,48 @@
   booktitle = {Trust, Privacy and Security in Digital Business}
 }
 
+# JWS RFC
+ @misc{jones_bradley_sakimura_2015,
+  title     = {RFC 7515: JSON web signature (JWS)},
+  url       = {https://datatracker.ietf.org/doc/rfc7515/},
+  journal   = {IETF Datatracker},
+  publisher = {IETF},
+  author    = {Jones, Michael and Bradley, John and Sakimura, Nat},
+  year      = {2015},
+  month     = {May}
+} 
+
+# JWE RFC
+ @misc{jones_hildebrand_2015,
+  title     = {RFC 7516: JSON Web Encryption (JWE)},
+  url       = {https://datatracker.ietf.org/doc/rfc7516/},
+  journal   = {IETF Datatracker},
+  publisher = {IETF},
+  author    = {Jones, Michael and Hildebrand, Joe},
+  year      = {2015},
+  month     = {May}
+} 
+
+# JWK
+ @misc{jones_2015,
+  title   = {RFC 7517: JSON web key (JWK)},
+  url     = {https://datatracker.ietf.org/doc/rfc7517/},
+  journal = {IETF Datatracker},
+  author  = {Jones, Michael},
+  year    = {2015},
+  month   = {May}
+} 
+
+# JWA
+ @misc{jones_2_2015,
+  title   = {RFC 7518: JSON Web Algorithms (JWA)},
+  url     = {https://datatracker.ietf.org/doc/rfc7518/},
+  journal = {IETF Datatracker},
+  author  = {Jones, Michael},
+  year    = {2015},
+  month   = {May}
+} 
+
 # Forbes Anonym messages Article
  @misc{martin_2022,
   title     = {Hugely popular NGL app offers teenagers anonymity in comments about each other},
