--- a/Thesis/content/02_related_work.tex
+++ b/Thesis/content/02_related_work.tex
@@ -293,7 +293,7 @@ The last major component in this architecture overview is the one in charge of r
 
 \subsection{DID methods}\label{subsec:did_methods}
 
- Based on their characteristics and patterns, DIDs can be sorted into different categories \cite{preukschat_reed_2021}, for example: 
+ Based on their characteristics and patterns, most DIDs can be sorted into different categories \cite{preukschat_reed_2021}, for example: 
 
 \begin{itemize}
   \item \textbf{Ledger-based DIDs}: This includes all the DIDs that store DIDs in a blockchain or other Distributed Ledger Technologies (DLTs). Examples include \emph{did:btcr}, \emph{did:ethr} and \emph{did:trx}, whose DIDs are stored in the Bitcoin, Ethereum, and Tron network correspondingly.
@@ -302,61 +302,17 @@ The last major component in this architecture overview is the one in charge of r
   \item \textbf{Static DIDs}: This type of DIDs are limited in the kind of operations that can be performed on them. These DIDs are not stored in any VDR, consequently, it is not possible to update, deactivate or rotate them. Using the \emph{did:key} method as an example, the DID-method-specific part of the DID is encoded in a way that the DID document can be extracted from it.\cite{longley_zagidulin_sporny_2022}.
 \end{itemize}
 
-There are more DIDs that do not necessarily fall into these categories, however, the majority of the existing ones do. Before arriving at the end of the DID section in this thesis, 
+Designing a DID method comprises different tasks such as defining if and how a DID will be anchored to a VDR, selecting if CRUD operations are possible and how to make them, as well as defining privacy and security mechanisms like verification method rotations or DID recovery. Some platforms behind these DID methods include the former Uport, with \emph{did:ethr}; Sovrin Foundation, with \emph{did:sov}; and the DIF with \emph{did:ion}.
 
-% did:ethr
-% This DID method was registered by Uport, an Ethereum-based system for self-sovereign identity \cite{Lundkvist_Heck_Torstensson_Mitton_Sena_2016}. It allows any Ethereum smart contract or key pair account, or any secp256k1 public key to becoming a valid identifier \cite{nistor_grassberger_carlin_2022}. UPort is a smart-contract-based system that abstracts user accounts using proxy contracts that are held by the user but may be retrieved if keys are lost. To do this, controller contracts create trusted entities for asserting ownership \cite{8783188}
-
-
-% did:ens:
-% The Ethereum Name Service (ENS) is a distributed, open, and extensible naming system based on the Ethereum blockchain. Its purpose is to map names like 'bob.eth' into machine-readable identifiers like Ethereum addresses, other cryptocurrency addresses, content hashes, and metadata. In the same way the Domain Name System (DNS) maps human-readable domains like 'google.com' to IP addresses. However, their architecture differs due to the capabilities and constraints of the Ethereum blockchain. (https://github.com/veramolabs/did-ens-spec )
-% This DID method was registered by Consensys, a blockchain venture studio founded by Ethereum's cofounder Joseph Lubin that supports Ethereum-based projects. Some of these projects include uPort, Metamask, Civil, Truffle and Gnosis. [https://decrypt.co/resources/consensys]. 
-
-
-% This DID method was created with the following objectives, firstly to integrate ENS names to be interoperable with applications that implement DIDs, and secondly, to add DID-capabilities to ENS names such as services and verification methods [https://github.com/veramolabs/did-ens-spec].
-
-% did:ion:
-% This DID method works by registering DIDs to the Bitcoin network. Launched to the public in March 2021, Identity Overlay Network (ION) is Microsoft's DID-network built on top of the Bitcoin Network implemented using Sidetree (https://techcommunity.microsoft.com/t5/identity-standards-blog/ion-we-have-liftoff/ba-p/1441555 ). 
-% ION is public, permissionless, it does not implement its own currency and its nodes do not require an additional consensus mechanism. (https://github.com/decentralized-identity/ion ).
-
-
-
-
-
-% Comparing DIDs with other identifiers
-
-
-% UUID Universally Unique Identifiers: 
-% UUIDs are similar to DIDs, because they do not require a centralized registration authority. But they are not resolvable or cryptographically-verifiable. 
-
-
-% Almost all types of identifier systems can support DIDs. This would create an interoperability bridge between centralized, federated and decentralized worlds. Implementers can use any kind of computing infrastructure they trust, such as distributed ledgers, decentralized file systems, distributed databases or peer-to-peer networks. 
-
-
-% Services
-% Services are used to specify ways to communicate with the DID subject. Services can be decentralized identity management for further discovery, authentication, authorization or interaction. 
-
-
-% DID Privacy 
-
-% The 7 Principles of Privacy by design have been applied to DIDs. (https://iapp.org/media/pdf/resource_center/pbd_implement_7found_principles.pdf )
-
-
-
-
-
-
-%  A DID is unlikely to contain any information about the DID subject, so further information about the DID subject is only discoverable by resolving the DID to the DID document, obtaining a verifiable credential about the DID, or via some other description of the DID.
-
-
-
+% --------------DIDComm-----------------------
 \section{DIDComm Messaging}\label{section:didcomm}
 
-The Hyperledger Foundation is an open-source collaborative effort intended to further develop blockchain technologies across industries \cite{jones_boswell_2022}. Started in 2016 by the Linux Foundation, it has given birth to numerous enterprise-grade software open-source projects that can be classified into DLTs, libraries, tools and labs \cite{lusard_lehors_muscara_boswell_zsigri_2021}. One of these graduate projects is Hyperledger Aries, which together with Hyperledger Indy (HI) and Hyperledger Ursa (HU), makes up the Sovereign Identity Blockchain Solutions of Hyperledger. HI supplies a distributed ledger specifically built for decentralized identity, HU is a shared cryptography library that helps to avoid duplicating cryptographic work across projects while also potentially increasing security. Finally, Aries provides solutions for SSI-based identity management, including key management, credential management, and an encrypted, peer-to-peer DID-based messaging system that is now labeled as DIDComm v1 \cite{jones_boswell_2022}. 
+The Hyperledger Foundation is an open-source collaborative effort intended to further develop blockchain technologies across industries \cite{jones_boswell_2022}. Started in 2016 by the Linux Foundation, it has given birth to numerous enterprise-grade software open-source projects that can be classified into DLTs, libraries, tools, and labs \cite{lusard_lehors_muscara_boswell_zsigri_2021}. One of these graduate projects is Hyperledger Aries, which together with Hyperledger Indy (HI) and Hyperledger Ursa (HU), makes up the Sovereign Identity Blockchain Solutions of Hyperledger. HI supplies a distributed ledger specifically built for decentralized identity, HU is a shared cryptography library that helps to avoid duplicating cryptographic work across projects while also potentially increasing security. Finally, Aries provides solutions for SSI-based identity management, including key management, credential management, and an encrypted, peer-to-peer DID-based messaging system that is now labeled as DIDComm v1 \cite{jones_boswell_2022}. 
 Based on DIDComm v1, the Communication Working Group (CWG) of the DIF has implemented DIDComm v2. The CWG pursues the standardization of DIDComm v2 not only to widen its implementation beyond Aries-based projects but to create an interoperable layer that would allow higher-order protocols to build upon its security, privacy, decentralization, and transport independence in the same way web services build upon HTTP. \cite{young_2020} \cite{curren_looker_terbu_2020}
 
-From this point on, the term \emph{DIDComm} will refer to DIDComm Messaging v2. DIDComm can be described as a communication protocol that promises a secure and private methodology that builds on top of the decentralized design of DIDs. It is a versatile protocol that supports a wide range of features, such as security, privacy, decentralization, routable, interoperability, and the ability to be transport-agnostic \cite{curren_looker_terbu_2020}.
-
+From this point on, the term \emph{DIDComm} will refer exclusively to DIDComm Messaging v2. DIDComm can be described as a communication protocol that promises a secure and private methodology that builds on top of the decentralized design of DIDs. It is a versatile protocol that supports a wide range of features, such as security, privacy, decentralization, routable, interoperability, and the ability to be transport-agnostic \cite{curren_looker_terbu_2020}.\\
+DIDComm differs from the current dominant web paradigm, where something as simple as an API call requires an almost immediate response through the same channel from the receiving end. However, this duplex request-response interaction is not always possible for several reasons. For example, some agents may not have a constant network connection; others may interact only in larger time frames, and some may even not listen over the same channel where the original message was sent. DIDComm's paradigm is asynchronous and one-directional, thus showing a considerable resemblance with the email paradigm. \\
+Furthermore, the web paradigm assumes the use of traditional processes like authentication, session management, and end-to-end encryption. DIDComm does not require certificates from external parties to establish trust, nor does it require constant connections for end-to-end transport level encryption like TLS. This takes the security and privacy responsibility away from institutions and places it within the agents. All of this without limiting the communication possibilities due to its ability to function as a base layer, upon which capabilities like sessions and synchronous interactions can be built \cite{curren_looker_terbu_2020}.\\ 
 To better understand how it works, let's look at how it would work in a scenario where Alice wants to send a private message to Bob: 
 
 \begin{algorithm}[H]
@@ -384,48 +340,52 @@ To better understand how it works, let's look at how it would work in a scenario
   \end{algorithmic}
 \end{algorithm}
 
+To achieve the encryption and signing processes mentioned in algorithm \ref{alg:didcomm_example}, DIDComm implements a family of the Internet Engineering Task Force (IETF) standards, collectively called JSON Object Signing and Encryption (JOSE). The JOSE Working Group strived to define JSON-based object formats to represent integrity and confidentiality. As well as a JSON way to express keys. Relevant resulting standards from this WG, as shown in figure \ref{fig:didcomm_tools}, are the following: 
 
-% [https://arxiv.org/pdf/2006.02456.pdf ]
+\begin{itemize}
+  \item \textbf{JSON Web Signature (JWS):}  A JWS is a subclass of the \textbf{JSON Web Token (JWT)} standard, which provides a JSON format to represent claims. A JWT becomes a JWS when it is digitally signed or by adding Message Authentication Codes (MAC)\cite{jones_bradley_sakimura_2015}.
+  \item \textbf{JSON Web Encryption (JWE):} Similar to a JWS, a JWE is also a subclass of a JWT. However, instead of signing, it encrypts the claims to add confidentiality. \cite{jones_hildebrand_2015}.
+  \item \textbf{JSON Web Key (JWK):} It provides a JSON format to represent a cryptographic key \cite{jones_2015}.
+  \item \textbf{JSON Web Algorithms (JWA):} It provides a collection of algorithms to be used by the previously mentioned standards \cite{jones_2_2015}.
+\end{itemize}
 
-DIDComm differs from the current dominant web paradigm, where something as simple as an API call requires an almost immediate response through the same channel from the receiving end. This duplex request-response interaction is, however, not always possible as many agents may not have a constant network connection or may interact only in larger time frames, or may even not listen over the same channel where the original message was sent. DIDComm's paradigm is asynchronous and \emph{simplex}. Thus showing a bigger resemblance with the email paradigm. Furthermore, the web paradigm goes under the assumption that traditional methods for processes like authentication, session management, and end-to-end encryption are being used. Didcomm does not require certificates from external parties to establish trust, nor does it require constant connections for end-to-end transport-level encryption (TLS). Taking the security and privacy responsibility away from institutions and placing it with the agents. All of this without limiting the communication possibilities because of its ability to function as a base layer where opposed capabilities like sessions and synchronous interactions can be built upon. \cite{curren_looker_terbu_2020}
+DIDComm specifies using other proposed standards that were not part of the JOSE WG. For example, the \textbf{JSON Web Message (JWM)}\footnote{https://datatracker.ietf.org/doc/pdf/draft-looker-jwm-01}, which is a basic, flexible JSON format to encode messages for a transport agnostic delivery; and the \textbf{ECDH-1PU}\footnote{https://datatracker.ietf.org/doc/html/draft-madden-jose-ecdh-1pu-04}, a public key authenticated encryption algorithm designed for the JWE. 
 
-To achieve the encryption and signing processes mentioned in algorithm \ref{alg:didcomm_example}, Didcomm implements a family of the Internet Engineering Task Force (IETF) standards, collectively called JSON Object Signing and Encryption (JOSE), which will be further explained in the next section. 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{related_work/didcomm_tools.png}
+  \caption{Standards used in DIDComm}
+  \label{fig:didcomm_tools}
+\end{figure}
 
-\subsection{JOSE Family}
-
-This RFC family includes both the JSON Web Signature (JWS) and the JSON Web Encryption (JWE) standards that are subclasses of the JSON Web Token (JWT), and JSON Web Key (JWK).
-
-
-The second part of the DIDComm enablement, namely the signing and encrypting, will depend on what kind of security guarantees we want to achieve. DIDComm offers different approaches based on signing and two types of message encryption. Authenticated Sender Encryption (\emph{authcrypt}) and Anonymous Sender Encryption (\emph{anoncrypt}) are both encrypted and delivered to the recipient's DID. Still, they differ because only \emph{authcrypt} gives direct guarantees about the sender's identity. Sending anonymous messages in social networks is not usually the case, and removing the attribution of a post can lead to other problems \cite{martin_2022}. However, social networks like Ask.fm\footnote{https//ask.fm} or NGL\footnote{https://ask.fun} that rely on anonymous posts could use the advantages of \emph{anoncrypt}.
-
-DIDComm recommends using \emph{authcrypt} as the standard to provide confidentiality, message integrity, and authenticity of the sender. For this, \emph{authcrypt} requires the public key authenticated encryption algorithm \emph{ECDH-1PU}\footnote{https://datatracker.ietf.org/doc/html/draft-madden-jose-ecdh-1pu-04}. This algorithm j
-
-This is due to the use of the 
-Elliptic-curve Diffie\-Hellman (ECDH) protocol, which allows two parties to build a secure and private channel across an insecure and observable network. This protocol is part of the foundation of popular messaging apps such as Facebook Messenger, Whatsapp, Signal, and Didcomm V1 \cite{shaaban_2021}. This key agreement protocol works by having both parties interchanging the public keys of their EC keypairs and some other public information. Using this public data and their private keys both parties can calculate a shared secret value, which it's the same for both parties. Any other observer or third party is not able to compute this shared secret without the private data \cite{5972416}. 
-
-An alternative to \emph{Authcrypt} that also complies with the required confidentiality and non-repudiation requirements is to have a nested JWT. To achieve this, the plaintext is first signed and then the resulting JWS is used as the payload of a JWE. The algorithm \ref{alg:nested_jwt} illustrates better the workings of this. 
+As shown in figure \ref{fig:didcomm_tools}, DIDComm offers different approaches for key agreement encryption. Authenticated Sender Encryption (\emph{authcrypt}) and Anonymous Sender Encryption (\emph{anoncrypt}) are both encrypted and delivered to the recipient's DID. Still, they differ because only \emph{authcrypt} gives direct guarantees about the sender's identity. Sending anonymous messages in social networks is not usually the case, and removing the attribution of a post can lead to other problems \cite{martin_2022}. However, social networks like Ask.fm\footnote{https//ask.fm} or NGL\footnote{https://ask.fun} that rely on anonymous posts could use the advantages of \emph{anoncrypt}. \\
+DIDComm recommends using \emph{authcrypt} as the standard to provide confidentiality, message integrity, and authenticity of the sender. For this, \emph{authcrypt} requires the \emph{ECDH-1PU} proposed standard. An alternative to \emph{Authcrypt} that also complies with the required confidentiality and non-repudiation requirements is to have a nested JWT, shown in figure \ref{fig:nested_jwt}. To achieve this, the plaintext is first signed and then the resulting JWS is used as the payload of a JWE. The algorithm \ref{alg:nested_jwt} illustrates better the workings of this.
 
 \begin{algorithm}[H]
   \caption{Communication example with nested JWT}
   \label{alg:nested_jwt}
     \begin{algorithmic}[1]
-      \State Alice signs a plain text message using her private key \emph{sk\textsubscript{a}} and creates a \emph{(jws)}.
+      \State Alice signs a plain text message using her private key \emph{sk\textsubscript{a}} and creates a \emph{(JWS)}.
   
-      \State Alice encrypts the \emph{(jws)} using Bob's public key pk\textsubscript{b} and creates a \emph{(jwe)}.
+      \State Alice encrypts the \emph{(JWS)} using Bob's public key pk\textsubscript{b} and creates a \emph{(JWE)}.
   
-      \State Alice sends \emph{jwe} to Bob.
+      \State Alice sends \emph{JWE} to Bob.
   
-      \State Bob decrypts \emph{(jwe)} using his private key \emph{sk\textsubscript{b}} and obtains the \emph{jws}
-      \State Bob verifies \emph{(jws)} using Alice's public key \emph{pk\textsubscript{a}}
+      \State Bob decrypts \emph{(JWE)} using his private key \emph{sk\textsubscript{b}} and obtains the \emph{JWS}
+      \State Bob verifies \emph{(JWS)} using Alice's public key \emph{pk\textsubscript{a}}
   \end{algorithmic}
 \end{algorithm}
   
-In both alternatives, the identity of the sender can be confirmed and the plain text message remains encrypted and hidden from any third party that might manage to read the payload. As mentioned in \autoref{section:didcomm}, the JWE can be sent through any unprotected protocol and still keep all of its advantages. 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.5\textwidth]{related_work/nested_jwt.png}
+  \caption{Nested JWT example}
+  \label{fig:nested_jwt}
+\end{figure}
 
-
-
-Compare with other encryption methods. (TLS, Whatsapp end-to-end, Signal) (Use image below)
  
+
+
 
 % ---Left out well-known URIs. ----------
 % 
